ajuste final Read.

--- a/todo-projeto-tecnico-front/src/app/pages/form-tarefa/form-tarefa.component.html
+++ b/todo-projeto-tecnico-front/src/app/pages/form-tarefa/form-tarefa.component.html
@@ -45,8 +45,11 @@
       <label for="situacao">Situação</label>
       <input type="text" pInputText formControlName="situacao" />
     </div>
-  
-    <p-button type="submit" label="Salvar" icon="pi pi-save" iconPos="left"></p-button>
+    <div class="flex gap-1 mb-4">
+
+      <p-button type="submit" label="Salvar" icon="pi pi-save" iconPos="left"></p-button>
+      <p-button (click)="returnToList()" label="Voltar" icon="pi pi-undo" iconPos="left"></p-button>
+    </div>
   </form>
 </div>
   
